# veolang

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  veo.toml
.github/workflows/: build.yml
docs/spec/ru/: lexical_structure.md
examples/: assignment.veo  cast.veo  collatz_count.veo  factorial.veo  fibonacci.veo  for_loop.veo  if_else.veo  implementations.veo  implementations_for_primitives.veo  main.veo  short_circuit_evaluation.veo  simple_fraction.veo  simple_func.veo  simple_stack_linked_list.veo  simple_struct.veo  swap.veo  ternary.veo  traits.veo  variable.veo
include/ast/: ast.h  context.h  dumper.h  node.h  node_kind.h  stmt.h
include/ast/exprs/: asgn_expr.h  bin_expr.h  cast_expr.h  field_expr.h  func_call.h  lit_expr.h  method_call.h  nil.h  ref.h  sizeof_expr.h  struct_instance.h  ternary_expr.h  (+2 more)
include/basic/: name.h  value.h
include/bitcode/: deserializer.h  serializer.h
include/codegen/: codegen.h  mangler.h
include/diagnostic/: annotation.h  builder.h  codes.h  engine.h  note.h  span.h
include/driver/: build.h  cli_options.h  compiler.h  deps_resolver.h  module_loader.h
include/hir/: basic_block.h  bin_expr.h  branch.h  builder.h  cast.h  context.h  expr_stmt.h  field_expr.h  func.h  func_call.h  lit_expr.h  load_glob_var_by_name.h  load_var.h  mangle_kind.h  node.h  node_kind.h  ptr_arith.h  ref.h  ret.h  store.h  store_var.h  struct_def.h  struct_instance.h  ternary_expr.h  un_expr.h  var_def.h
include/hir_analyze/: cfg_bulder.h  return_checker.h
include/lexer/: keywords.h  lexer.h  token.h  token_kind.h
include/linealizer/: linealizer.h
include/linearizer/: linearizer.h
include/parser/: parser.h  precedence.h
include/sema/: sema.h
src/: ast.veo  basic.veo  lexer.veo  main.cpp  main.veo  runtime.c  std.veo  types.veo
src/ast/: dumper.cpp
src/bitcode/: deserializer.cpp  serializer.cpp
src/codegen/: codegen.cpp  mangler.cpp
src/diagnostic/: engine.cpp
src/driver/: build.cpp  cli_options.cpp  compiler.cpp  deps_resolver.cpp
src/hir_analyze/: cfg_builder.cpp  dead_code_eliminator.cpp  return_checker.cpp
src/lexer/: lexer.cpp
src/linearizer/: linearizer.cpp
src/llvm/: smloc.veo  source_mgr.veo
src/parser/: parser.cpp
src/sema/: candidates.cpp  casting.cpp  exprs.cpp  finding_symbols.cpp  folding.cpp  sema.cpp  stmts.cpp  type_size_evaluator.cpp  types_manip.cpp
src/std/: fs.veo  fs_runtime.c  io.veo  math.veo  mem.veo  string.veo  sys.veo
src/tests/: test.veo  var_decl.veo
stage0/: CMakeLists.txt
stage0/src/: main.cpp
stage0/tests/: CMakeLists.txt
tests/: framework.h
tests/parser/: CMakeLists.txt  context.h  main.cpp  test_var_def.cpp  test_var_def.veo
tests/parser/src/: test_compound_assignments.cpp  test_const_f64.cpp  test_expected_semi.cpp  test_for_infinite_loop.cpp  test_for_loop_with_cond.cpp  test_func_arguments.cpp  test_func_empty.cpp  test_func_void_return.cpp  test_if_else_if_chain.cpp  test_impl_block_methods.cpp  test_impl_trait_for_struct.cpp  test_invalid_empty_parentheses.cpp  test_invalid_for_empty_cond.cpp  test_invalid_func_arg_no_colon.cpp  test_invalid_func_missing_brace.cpp  test_invalid_func_missing_paren.cpp  test_invalid_func_missing_ret_type.cpp  test_invalid_func_trailing_comma.cpp  test_invalid_if_empty_cond.cpp  test_invalid_if_missing_brace.cpp  test_invalid_impl_missing_brace.cpp  test_invalid_impl_missing_target.cpp  test_invalid_method_call_empty.cpp  test_invalid_struct_field_keyword.cpp  test_invalid_struct_field_missing_semi.cpp  test_invalid_struct_instance_missing_colon.cpp  test_invalid_struct_missing_brace.cpp  test_invalid_struct_missing_name.cpp  test_named_type_path.cpp  test_struct_instance_creation.cpp  test_unary_operations.cpp  test_var_def.cpp
tests/parser/veo/: test_complex_binary_expr.veo  test_compound_assignments.veo  test_field_access_and_assignment.veo  test_func_arguments.veo  test_func_void_return.veo  test_if_else_if_chain.veo  test_if_statement.veo  test_invalid_empty_parentheses.veo  test_invalid_expr_double_eq.veo  test_invalid_expr_trailing_op.veo  test_invalid_expr_unmatched_paren.veo  test_invalid_for_missing_semi.veo  test_invalid_func_arg_no_colon.veo  test_invalid_func_missing_brace.veo  test_invalid_if_empty_cond.veo  test_invalid_if_missing_brace.veo  test_invalid_impl_missing_target.veo  test_invalid_method_call_empty.veo  test_invalid_struct_field_keyword.veo  test_invalid_struct_field_missing_semi.veo  test_invalid_struct_instance_missing_colon.veo  test_invalid_struct_missing_brace.veo  test_invalid_var_missing_name.veo  test_pub_variable.veo  test_struct_declaration.veo  test_ternary.veo  test_unary_operations.veo
tests/sema/: CMakeLists.txt  commands_parser.h  engine.h  main.cpp
tests/sema/veo/: 05_valid_local_char.veo  06_valid_const_int.veo  100_error_unreachable_after_return.veo  13_error_shadow_redefinition_same_block.veo  17_error_nil_to_bool.veo  19_error_redefine_param_as_local.veo  27_valid_global_var_in_func.veo  31_error_no_matching_func.veo  33_error_forward_call_wrong_args.veo  34_error_func_redefinition.veo  35_error_call_non_existent.veo  36_error_arg_count_mismatch.veo  37_error_div_by_zero_int.veo  38_error_rem_by_zero_int.veo  39_error_not_op_float.veo  41_valid_constexpr_folding.veo  42_valid_bitwise_ops.veo  43_error_div_by_zero_nested.veo  44_error_return_type_mismatch  45_valid_unary_minus.veo  46_valid_implicit_cast_ints.veo  47_valid_implicit_cast_floats.veo  49_error_ambiguous_overload_ints.veo  51_valid_struct_def.veo  54_error_struct_redefinition.veo  55_error_duplicate_field.veo  56_error_unknown_field.veo  59_valid_static_field.veo  61_valid_nested_field_access.veo  63_valid_impl_method.veo  65_error_immutable_receiver.veo  66_valid_mutable_receiver.veo  69_error_no_matching_method.veo  70_valid_chained_method_calls.veo  72_error_call_instance_as_static.veo  76_valid_cast_int_ext.veo  78_valid_cast_float_ext.veo  83_error_use_trait_as_variable_type.veo  85_error_cast_nil_to_non_ptr.veo  87_error_cast_noth_to_int.veo  (+6 more)
tests/unit/: boilerplate.h
(+236 files in other folders)
